out/fcs_out
Simulation#init()
Devices found: 1
Device Vendor ID: 4318
program.cl build options: -D RNGRESERVED=10000 -D DEBUG
:287:14: error: cannot increment value of type 'float __attribute__((address_space(1)))'
    debug[7] ++;
    ~~~~~~~~ ^

fcs: simulation.cpp:70: void Simulation::init(std::string, int): Assertion `err == 0' failed.
